--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -1,7 +1,10 @@
-<html><head></head>
-<body>
-    {{> header}}
-        {{{body}}}
-    {{> footer}}
-</body>
+<html>
+    <head>
+        <link rel="stylesheet" href="/css/app.css">
+    </head>
+    <body>
+        {{> header}}
+            {{{body}}}
+        {{> footer}}
+    </body>
 </html>
