--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -1,2 +1,11 @@
-<a href="/">home</a>
-<a href="/news">news</a>
+<ul class="nav">
+  <li class="nav-item">
+    <a class="nav-link active" aria-current="page" href="/">home</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link active" aria-current="page" href="/search">search</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link disabled" href="/" tabindex="-1" aria-disabled="true">news</a>
+  </li>
+</ul>
