--- a/src/resources/views/search.hbs
+++ b/src/resources/views/search.hbs
@@ -1,1 +1,14 @@
 <h1>search</h1>
+<div class="mt-4">
+    <form>
+        <fieldset>
+            <legend>example</legend>
+            <div class="mb-3">
+            <label for="searchInput" class="form-label">Search</label>
+            <input type="text" name="q" id="searchInput" class="form-control">
+            </div>
+            
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </fieldset>
+    </form>
+</div>
