--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -6,6 +6,6 @@
     <a class="nav-link active" aria-current="page" href="/search">search</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link disabled" href="/" tabindex="-1" aria-disabled="true">news</a>
+    <a class="nav-link" href="/news">news</a>
   </li>
 </ul>
